@@ -4,6 +4,7 @@ Bugfixes:
 - Fix display of unhided rows/columns for loaded files
 - Fix enabled status for buttons insert column/row when row/column is selected
 - Fix for display of print range with repeated rows
+- Fix for COUNTBLANK function
 
 Changes since 1.2
 =================
